# WebServ

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  client.out  default.cfg  diagram.tldr  mime.types  notes.txt  rfs.txt  server.out  test
DEMO/: Makefile
DEMO/Client/: client.cpp  client.hpp
DEMO/Server/: server.cpp  server.hpp
DEMO/includes/: tools.hpp
DEMO/tools/: tools.hpp
client/: client.cpp  client.hpp
conf/: default.cfg  mime.types
config/: config.cfg  default.cfg  mime.types
config/servers/: example.com.cfg  example.org.cfg
include/: connections.hpp  context.hpp  definitions.hpp  init.hpp  location.hpp  parser.hpp  server.hpp  webServ.hpp
include/webserv/: IBase.hpp  Ibase.hpp  client.hpp  configuration.hpp  context.hpp  core.hpp  defines.hpp  http.hpp  init.hpp  loadConfiguration.hpp  request.hpp  response.hpp  webserv.hpp
includes/: helper.hpp
nginx/: DockerFile  lighttpd.conf
server/: server.cpp  server.hpp
src/: connections.cpp  context.cpp  http_request  init.cpp  location.cpp  main.cpp  program  request_main.cpp  server.cpp  webServ.cpp
src/core/: context.cpp  init.cpp  loadConfiguration.cpp  luncher.cpp  tools.cpp  webserv.cpp
src/http/: IBase.cpp  Ibase.cpp  acceptConnection.cpp  baseParser.cpp  blockMatchAlgorithm.cpp  cgi.cpp  cgiExecutor.cpp  cgiHandler.cpp  client.cpp  connectionHandler.cpp  deleteMethodHundler.cpp  getMethodHandler.cpp  get_method_handler.cpp  postMethodHundler.cpp  request.cpp  (+11 more)
template/: config.cfg  mime.types
tests/: test1.py
www/: entryPoint.py  index.html  index.py  index2.html
(+94 files in other folders)
